Fixes the portrait image being transparent on safari.

--- a/style.css
+++ b/style.css
@@ -71,11 +71,13 @@ hr.small {
   border: 1px solid #aaa;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  z-index: 1; /* safari fix */
 }
 
 .portrait {
   border: 10px double white;
   border-radius: 50%;
+  z-index: 2; /* safari fix */
 }
 
 /* start language */
@@ -208,6 +210,13 @@ body {
 /* end scrollbar */
 /* start background */
 
+.parallax-el {
+  position: fixed;
+  width: 100%;
+  height: 1600px;
+  z-index: 0; /* safari fix */
+}
+
 .background {
   position: fixed;
   top: 0;
@@ -216,12 +225,6 @@ body {
   width: 100%;
   background: url("img/parallax-galaxy/background.jpg");
   filter: brightness(50%);
-}
-
-.parallax-el {
-  position: fixed;
-  width: 100%;
-  height: 1600px;
 }
 
 .clouds-fg-blue {
